test/language/spec/syntax/invalid/empty_namespace.topo
// TEST: namespace with number instead of identifier
// EXPECT-ERROR: expected

namespace 123 {
  public:
    void run();
}
